# claude-hub

./: .cursorrules  .env.example  .gitignore  BOOTSTRAP_CLAUDE_REPO.md  CLAUDE.md  README.md  install.sh  package.json  pyproject.toml
agents/: README.md
agents/coder/src/coder/: __init__.py
agents/critic/src/critic/: __init__.py
agents/orchestrator/: CLAUDE.md  pyproject.toml
agents/orchestrator/src/orchestrator/: __init__.py  graph.py  nodes.py  prompts.py  state.py
agents/researcher/src/researcher/: __init__.py
context/: aws-conventions.md  engineering-principles.md  git-conventions.md  python-standards.md  typescript-standards.md
evals/: README.md  pyproject.toml
evals/framework/: __init__.py  datasets.py  reporter.py  runner.py  scorers.py
evals/suites/agent_task_completion/: dataset.jsonl  eval.py
evals/suites/mcp_tool_accuracy/: dataset.jsonl  eval.py
evals/suites/prompt_quality/: dataset.jsonl  eval.py
infra/: README.md  cdk.json  package.json  tsconfig.json
infra/lib/constructs/: ecs-fastapi.ts  lambda-python.ts
infra/lib/stacks/: ai-pipeline-stack.ts  mcp-server-stack.ts  mlops-stack.ts
install/: settings-fragment.json
mcp-servers/: README.md
mcp-servers/code-tools/: SKILL.md  pyproject.toml
mcp-servers/code-tools/src/code_tools/: __init__.py  server.py
mcp-servers/knowledge-base/: SKILL.md  pyproject.toml
mcp-servers/knowledge-base/benchmarks/: bench_tools.py
mcp-servers/knowledge-base/evals/: eval_retrieval.py
mcp-servers/knowledge-base/src/knowledge_base/: __init__.py  embeddings.py  server.py  tools.py
mcp-servers/knowledge-base/tests/: test_server.py
mlops/: README.md  pyproject.toml
mlops/src/mlops/: __init__.py  experiment_tracking.py  feature_store.py  model_registry.py  sagemaker_pipeline.py
scripts/: bench_mcp.sh  bootstrap.sh  run_evals.sh
skills/: README.md
skills/_template/: SKILL.md
skills/aws-cdk-construct/: SKILL.md
skills/eval-harness/: SKILL.md
skills/langgraph-agent/: SKILL.md
skills/mcp-server/: SKILL.md
skills/python-refactor/: SKILL.md
skills/temporal-workflow/: SKILL.md
skills/write-tests/: SKILL.md
workflows/: README.md  pyproject.toml
workflows/src/workflows/: __init__.py  activities.py  ai_pipeline_workflow.py  worker.py
