[project]
name = "mlops"
version = "0.1.0"
description = "MLOps tooling: feature engineering, experiment tracking, model registry, SageMaker"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "mlflow>=2.13",
    "pydantic>=2.0",
    "structlog>=24.0",
    "sagemaker>=2.220",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "moto[s3,sagemaker]>=5.0",
]
