[project]
name = "workflows"
version = "0.1.0"
description = "Temporal.io durable workflow definitions for AI pipelines"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.6",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflows"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
