[project]
name = "knowledge-base"
version = "0.1.0"
description = "MCP server: semantic search over a document corpus"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "anthropic>=0.40",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.scripts]
serve = "knowledge_base.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
